--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./src/server.ts",
   "scripts": {
     "tsc": "tsc --init",
+    "start": "nodemon --watch src --exec tsx src/server.ts",
     "dev": "nodemon --watch src --exec tsx src/server.ts"
   },
   "keywords": [],
